kubernetes/Int/deployments/default/homepage/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.9.5
          volumeMounts:
            - name: pvc
              mountPath: /app/config
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: homepage
