kubernetes/Int/deployments/default/homepage/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: homepage
spec:
    selector:
        app: homepage
    ports:
        - name: ui
          port: 3000
